Criação do Harry Potter e adição de eventos

--- a/Pacman/Makefile
+++ b/Pacman/Makefile
@@ -18,4 +18,4 @@ Main.o: ./libs/tabuleiro.h ./libs/bloco.h ./libs/pilula.h Main.cpp
 	g++ -c Main.cpp -o Main.o $(ALLEGRO_INCLUDE) $(ALLEGRO_FLAGS)
 
 clear: 
-	rm *.o *.exe
+	erase *.o *.exe
